css/navbar.css
ul
{
  list-style-type: none;
	position: fixed;
	top: 0;
	left: 100%;
	width: 100%;
	margin: 0;
	padding: 0;
  border: 0;
	background-color: #000000;
	z-index: 1;
  visibility: hidden;

}
/*ul:hover
{
  opacity: 1;
}*/
li
{
	float: left;
}
li a, .dropbtn
{
	display: inline-block;
	padding: 16px;
	color: white;
	text-align: center;
	text-decoration: none;
}
li a:hover, .dropdown:hover .dropbtn
{
	background-color: #333333;
}
li.dropdown
{
	display: inline-block;
}
.dropdown-content
{
	display: none;
	position: absolute;
	background-color: #f4f4f4;
	min-width: 160px;
	box-shadow: 0px 8px 16px 8px rbga(0, 0, 0, 0.5);
	z-index: 1;
}
.dropdown-content a
{
	color: black;
	padding: 16px;
	text-decoration: none;
	display: block;
	text-align: left;
}
.dropdown-content a:hover
{
	background-color: #999999;
}
.dropdown:hover .dropdown-content
{
	display: block;
  transition: 0.5s;
}

